add: jar creation