@@ -26,6 +26,6 @@ gradlew.bat shadowJar
 
 ### Lancement jar
 ```bash
-export JAVAFX_HOME=
-java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar codingweek-1.0-all.jar
+export JAVAFX_HOME=your/path
+java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml --add-opens java.base/java.lang=ALL-UNNAMED -jar codingweek-1.0-all.jar 
 ```
